--- a/lib/timer-component/package.json
+++ b/lib/timer-component/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "timer-component",
+  "name": "@luaguirre/timercomponent",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "publish:npm": "npm publish --access public"
   },
-  "author": "",
-  "license": "ISC",
   "eslintConfig": {
     "extends": "node_modules/standard/eslintrc.json"
   },
